[package]
name = "libp2p-autonat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4.10", features = ["derive"] }
futures = "0.3.29"
libp2p = { version = "0.53.2", features = ["tokio", "tcp", "noise", "yamux", "autonat", "identify", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"

[lints]
workspace = true
