[package]
name = "libp2p-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
release = false

[dependencies]
futures = "0.3.29"
libp2p = {  version = "0.53.2", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
pretty_env_logger = "0.4"

[lints]
workspace = true
